week 5 files added

--- a/week5/code/01_pyspark.ipynb
+++ b/week5/code/01_pyspark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a904c956",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "df6224e0",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "'3.2.3'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "554a3f36",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "'/home/gbotemi/spark/spark-3.2.3-bin-hadoop3.2/python/pyspark/__init__.py'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "75d854fa",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyspark.ipynb  taxi+_zone_lookup.csv\r\n"
+      "01_pyspark.ipynb       fhvhv\r\n",
+      "02_pyspark.ipynb       fhvhv_tripdata_2021-01.csv\r\n",
+      "03_pyspark.ipynb       fhvhv_tripdata_2021-01.csv.gz\r\n",
+      "06_spark_sql.ipynb     fhvhv_tripdata_2021-01.parquet\r\n",
+      "07_groupby_join.ipynb  head.csv\r\n",
+      "data\t\t       notes.md\r\n",
+      "download_data.sh       taxi+_zone_lookup.csv\r\n"
      ]
     }
    ],
@@ -101,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "1bbe0707",
    "metadata": {},
    "outputs": [
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "58dd6711",
    "metadata": {},
    "outputs": [
@@ -154,7 +160,8 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/02/18 20:45:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/02/20 16:10:43 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/02/20 16:10:45 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -167,21 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "42fd9a09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read \\\n",
     "    .option(\"header\", \"true\") \\\n",
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "7daea286",
    "metadata": {},
    "outputs": [
@@ -233,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "b59eb27e",
    "metadata": {},
    "outputs": [
