--- a/week5/code/assignment.ipynb
+++ b/week5/code/assignment.ipynb
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "27fdf234",
+   "id": "2b56bb69",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d47fea19",
+   "id": "4e2f1c6c",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2a560dce",
+   "id": "38161d13",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "01b193da",
+   "id": "42b18156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8107f5dc",
+   "id": "5ec8e153",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "214831dc",
+   "id": "c80d84c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "ef9d1b1c",
+   "execution_count": 136,
+   "id": "73bb5390",
    "metadata": {
     "scrolled": true
    },
@@ -587,23 +587,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------+-------------------+------------+\n",
-      "|LocationID| Borough|               Zone|service_zone|\n",
-      "+----------+--------+-------------------+------------+\n",
-      "|        61|Brooklyn|Crown Heights North|   Boro Zone|\n",
-      "+----------+--------+-------------------+------------+\n",
+      "+----------+---------+--------------------+------------+\n",
+      "|LocationID|  Borough|                Zone|service_zone|\n",
+      "+----------+---------+--------------------+------------+\n",
+      "|        62| Brooklyn| Crown Heights South|   Boro Zone|\n",
+      "|        63| Brooklyn|       Cypress Hills|   Boro Zone|\n",
+      "|        64|   Queens|          Douglaston|   Boro Zone|\n",
+      "|        65| Brooklyn|Downtown Brooklyn...|   Boro Zone|\n",
+      "|        66| Brooklyn|  DUMBO/Vinegar Hill|   Boro Zone|\n",
+      "|        67| Brooklyn|       Dyker Heights|   Boro Zone|\n",
+      "|        68|Manhattan|        East Chelsea| Yellow Zone|\n",
+      "|        69|    Bronx|East Concourse/Co...|   Boro Zone|\n",
+      "|        70|   Queens|       East Elmhurst|   Boro Zone|\n",
+      "|        71| Brooklyn|East Flatbush/Far...|   Boro Zone|\n",
+      "|        72| Brooklyn|East Flatbush/Rem...|   Boro Zone|\n",
+      "|        73|   Queens|       East Flushing|   Boro Zone|\n",
+      "|        74|Manhattan|   East Harlem North|   Boro Zone|\n",
+      "|        75|Manhattan|   East Harlem South|   Boro Zone|\n",
+      "|        76| Brooklyn|       East New York|   Boro Zone|\n",
+      "|        77| Brooklyn|East New York/Pen...|   Boro Zone|\n",
+      "|        78|    Bronx|        East Tremont|   Boro Zone|\n",
+      "|        79|Manhattan|        East Village| Yellow Zone|\n",
+      "|        80| Brooklyn|   East Williamsburg|   Boro Zone|\n",
+      "|        81|    Bronx|         Eastchester|   Boro Zone|\n",
+      "+----------+---------+--------------------+------------+\n",
+      "only showing top 20 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "zones.filter(zones.LocationID == 61).show()"
+    "zones.filter(zones.LocationID > 61).show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c38675a6",
+   "id": "47800a90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3d2ee0ac",
+   "id": "26751f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7899da25",
+   "id": "098b1815",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "847d362d",
+   "id": "4c6a8fc1",
    "metadata": {},
    "outputs": [
     {
@@ -742,75 +762,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "6e0468a0",
+   "execution_count": null,
+   "id": "6f86d4ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 151:>                                                        (0 + 4) / 4]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+------------+\n",
-      "| count|PULocationID|\n",
-      "+------+------------+\n",
-      "|231279|          61|\n",
-      "|221244|          79|\n",
-      "|188867|         132|\n",
-      "|187929|          37|\n",
-      "|186780|          76|\n",
-      "|164344|         231|\n",
-      "|161596|         138|\n",
-      "|158937|         234|\n",
-      "|154698|         249|\n",
-      "|152493|           7|\n",
-      "|151020|         148|\n",
-      "|147673|          68|\n",
-      "|146402|          42|\n",
-      "|143683|         255|\n",
-      "|143594|         181|\n",
-      "|141427|         225|\n",
-      "|139611|          48|\n",
-      "|139431|         246|\n",
-      "|138428|          17|\n",
-      "|137879|         170|\n",
-      "+------+------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 151:==========================================>              (3 + 1) / 4]\r",
-      "\r",
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark.sql(\"\"\"\n",
     "\n",
     "SELECT\n",
-    "    count(*) as count,\n",
-    "    PULocationID\n",
+    "    MAX(count(*) as count),\n",
+    "    zone\n",
     "    \n",
     "FROM\n",
     "    trips_data as t\n",
     "LEFT JOIN zone as z\n",
     "ON t.PULocationID = z.LocationID\n",
-    "GROUP BY PULocationID\n",
-    "ORDER BY count DESC\n",
-    "LIMIT 100\n",
+    "\n",
+    "LIMIT 5\n",
     "\"\"\"\n",
     ").show()"
    ]
@@ -818,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5adc62",
+   "id": "b3919900",
    "metadata": {},
    "outputs": [],
    "source": []
