--- a/week5/code/assignment.ipynb
+++ b/week5/code/assignment.ipynb
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2b56bb69",
+   "id": "a314347c",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4e2f1c6c",
+   "id": "826f9ea0",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "38161d13",
+   "id": "1c2cf6d2",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "42b18156",
+   "id": "9fe4c959",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5ec8e153",
+   "id": "23acd5a7",
    "metadata": {},
    "outputs": [
     {
@@ -510,42 +510,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 196,
    "id": "8b939273",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "[Stage 34:>                                                         (0 + 4) / 4]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-------------------+-------------------+--------------------+\n",
-      "|dispatching_base_num|    pickup_datetime|   dropoff_datetime|            duration|\n",
-      "+--------------------+-------------------+-------------------+--------------------+\n",
-      "|              B02872|2021-06-25 13:55:41|2021-06-28 08:48:25|INTERVAL '-2 19:0...|\n",
-      "|              B02765|2021-06-22 12:09:45|2021-06-23 13:42:44|INTERVAL '-1 01:0...|\n",
-      "|              B02879|2021-06-27 10:32:29|2021-06-28 06:31:20|INTERVAL '-0 20:0...|\n",
-      "|              B02800|2021-06-26 22:37:11|2021-06-27 16:49:01|INTERVAL '-0 18:0...|\n",
-      "|              B02682|2021-06-23 20:40:43|2021-06-24 13:08:44|INTERVAL '-0 17:0...|\n",
-      "+--------------------+-------------------+-------------------+--------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                \r"
+     "ename": "ParseException",
+     "evalue": "\nmismatched input ')' expecting {<EOF>, ';'}(line 6, pos 58)\n\n== SQL ==\n\nSELECT\n    dispatching_base_num,\n    pickup_datetime,\n    dropoff_datetime,\n    CAST((dropoff_datetime - pickup_datetime) as datetime)) AS duration,\n----------------------------------------------------------^^^\nFROM\n    trips_data\nLIMIT 5\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mParseException\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[196], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mspark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msql\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;43mSELECT\u001b[39;49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;43m    dispatching_base_num,\u001b[39;49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;43m    pickup_datetime,\u001b[39;49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;43m    dropoff_datetime,\u001b[39;49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;43m    CAST((dropoff_datetime - pickup_datetime) as datetime)) AS duration,\u001b[39;49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;43mFROM\u001b[39;49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;43m    trips_data\u001b[39;49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;43mLIMIT 5\u001b[39;49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124;43m\"\"\"\u001b[39;49m\n\u001b[1;32m     11\u001b[0m \u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshow()\n",
+      "File \u001b[0;32m~/spark/spark-3.2.3-bin-hadoop3.2/python/pyspark/sql/session.py:723\u001b[0m, in \u001b[0;36mSparkSession.sql\u001b[0;34m(self, sqlQuery)\u001b[0m\n\u001b[1;32m    707\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msql\u001b[39m(\u001b[38;5;28mself\u001b[39m, sqlQuery):\n\u001b[1;32m    708\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Returns a :class:`DataFrame` representing the result of the given query.\u001b[39;00m\n\u001b[1;32m    709\u001b[0m \n\u001b[1;32m    710\u001b[0m \u001b[38;5;124;03m    .. versionadded:: 2.0.0\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    721\u001b[0m \u001b[38;5;124;03m    [Row(f1=1, f2='row1'), Row(f1=2, f2='row2'), Row(f1=3, f2='row3')]\u001b[39;00m\n\u001b[1;32m    722\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 723\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jsparkSession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msql\u001b[49m\u001b[43m(\u001b[49m\u001b[43msqlQuery\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wrapped)\n",
+      "File \u001b[0;32m~/spark/spark-3.2.3-bin-hadoop3.2/python/lib/py4j-0.10.9.5-src.zip/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1315\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1316\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1320\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1321\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1322\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1324\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1325\u001b[0m     temp_arg\u001b[38;5;241m.\u001b[39m_detach()\n",
+      "File \u001b[0;32m~/spark/spark-3.2.3-bin-hadoop3.2/python/pyspark/sql/utils.py:117\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    113\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    115\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    116\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 117\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    119\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[0;31mParseException\u001b[0m: \nmismatched input ')' expecting {<EOF>, ';'}(line 6, pos 58)\n\n== SQL ==\n\nSELECT\n    dispatching_base_num,\n    pickup_datetime,\n    dropoff_datetime,\n    CAST((dropoff_datetime - pickup_datetime) as datetime)) AS duration,\n----------------------------------------------------------^^^\nFROM\n    trips_data\nLIMIT 5\n"
      ]
     }
    ],
@@ -555,11 +537,9 @@
     "    dispatching_base_num,\n",
     "    pickup_datetime,\n",
     "    dropoff_datetime,\n",
-    "    (DATE_TRUNC('HOUR', pickup_datetime) - (DATE_TRUNC('HOUR', dropoff_datetime))) AS duration\n",
+    "    CAST(CASTr(dropoff_datetime - pickup_datetime) as datetime)) AS duration,\n",
     "FROM\n",
     "    trips_data\n",
-    "ORDER BY\n",
-    "    duration ASC\n",
     "LIMIT 5\n",
     "\"\"\"\n",
     ").show()"
@@ -568,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c80d84c0",
+   "id": "fdb3bc1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "73bb5390",
+   "id": "7dabed3e",
    "metadata": {
     "scrolled": true
    },
@@ -623,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "47800a90",
+   "id": "f8c51ab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "26751f4f",
+   "id": "97550dd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "098b1815",
+   "id": "456e463f",
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "4c6a8fc1",
+   "id": "00d6e3cb",
    "metadata": {},
    "outputs": [
     {
@@ -762,22 +742,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f86d4ea",
+   "execution_count": 154,
+   "id": "4938692f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 175:>                                                        (0 + 4) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------------------+\n",
+      "| count|               zone|\n",
+      "+------+-------------------+\n",
+      "|231279|Crown Heights North|\n",
+      "|221244|       East Village|\n",
+      "|188867|        JFK Airport|\n",
+      "|187929|     Bushwick South|\n",
+      "|186780|      East New York|\n",
+      "+------+-------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 175:============================>                            (2 + 2) / 4]\r",
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "spark.sql(\"\"\"\n",
     "\n",
     "SELECT\n",
-    "    MAX(count(*) as count),\n",
+    "    (count(*)) as count,\n",
     "    zone\n",
     "    \n",
     "FROM\n",
     "    trips_data as t\n",
     "LEFT JOIN zone as z\n",
     "ON t.PULocationID = z.LocationID\n",
-    "\n",
+    "GROUP BY zone\n",
+    "ORDER BY count DESC\n",
     "LIMIT 5\n",
     "\"\"\"\n",
     ").show()"
@@ -785,8 +801,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "id": "7e26ea3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zones.createTempView(\"temp_zone\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "695c0b70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+--------------------+------------+\n",
+      "|LocationID|      Borough|                Zone|service_zone|\n",
+      "+----------+-------------+--------------------+------------+\n",
+      "|         1|          EWR|      Newark Airport|         EWR|\n",
+      "|         2|       Queens|         Jamaica Bay|   Boro Zone|\n",
+      "|         3|        Bronx|Allerton/Pelham G...|   Boro Zone|\n",
+      "|         4|    Manhattan|       Alphabet City| Yellow Zone|\n",
+      "|         5|Staten Island|       Arden Heights|   Boro Zone|\n",
+      "+----------+-------------+--------------------+------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "SELECT *\n",
+    "FROM temp_zone\n",
+    "\"\"\").show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b3919900",
+   "id": "a27926f0",
    "metadata": {},
    "outputs": [],
    "source": []
